CHANGELOG fuer c't-Bot
======================
2009-04-06 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer map_get_average, kleine Verbesserungen beim Pfadplanungsverhalten (#185)

2009-03-31 Timo Sandmann [mail@timosandmann.de]: Map-2-Sim-Code ueberarbeitet, Sim kann jetzt die komplette Karte anfordern

2009-03-27 Frank Menzel [Menzelfr@gmx.de]: Pfadplanungsverhalten erweitert: schraeges Fahren und Planung nur auf befahrenem Gebiet ermoeglicht sowie Einzeichnen des Pfadweges (rot) via MAP_2_SIM_AVAILABLE

2009-03-18 Timo Sandmann [mail@timosandmann.de]: Delay-Code an aktuellen Timer-Code angepasst

2009-03-16 Timo Sandmann [mail@timosandmann.de]: ToDo-Punkte erledigt: bot-2-pc und bot-2-sim vereinheitlicht zu bot-2-sim;
																	   Unterschiede zwischen MCU und PC in ct-Bot.c und command.c minimiert

2009-03-13 Timo Sandmann [mail@timosandmann.de]: RemoteCalls per Bot-2-Bot-Kommunikation

2009-03-11 Frank Menzel [Menzelfr@gmx.de]: kleinen Bug in line_shortest_way_beseitigt bei Zielerkennung; ein Liniensensor braucht nur auf Zielfeld zu stehen zur Erkennung

2009-03-11 Timo Sandmann [mail@timosandmann.de]: Fifo-Implementierung verbessert: Automatische Blockierung bei leerer Fifo, Anwendungscode wird so einfacher und ist unabhaengig von der Zielarchitektur; Debug-Code fuer pthreads

2009-03-02 Timo Sandmann [mail@timosandmann.de]: Map-2-Sim ueberarbeitet, funktioniert jetzt auch auf dem echten Bot ohne grosse Verzoegerungen

2009-03-02 Timo Sandmann [mail@timosandmann.de]: mmc-Init-Code verbessert, Motorsteuerung bei 20 MHz optimiert

2009-02-26 Frank Menzel [Menzelfr@gmx.de]:		 Neues Verhalten behaviour_follow_line_enhanced; erweiterter Linienfolger um auch mit Unterbrechungen und Hindernissen klarzukommen

2009-02-26 Timo Sandmann [mail@timosandmann.de]: Timer-Auswertung zusaetzlich gegen Interrupts abgesichert, bot_follow_line() stellt beim Start benoetigte Map-Optionen ein
